--- a/CollectMailScheduler/CollectMailScheduler.csproj
+++ b/CollectMailScheduler/CollectMailScheduler.csproj
@@ -4,6 +4,7 @@
     <AzureFunctionsVersion>V2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.1.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.22" />
   </ItemGroup>
   <ItemGroup>
