Slight soln reorg and addition of storage accunt to infra

--- a/Tests/EmailSentimentAnalysis.Tests.Unit/EmailSentimentAnalysis.Tests.Unit.csproj
+++ b/Tests/EmailSentimentAnalysis.Tests.Unit/EmailSentimentAnalysis.Tests.Unit.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MailSanitiserFunction\MailSanitiserFunction.csproj" />
+    <ProjectReference Include="..\..\Functions\MailSanitiserFunction\MailSanitiserFunction.csproj" />
   </ItemGroup>
 
 </Project>
