--- a/Functions/MailSchedulerFunction/MailSchedulerFunction.csproj
+++ b/Functions/MailSchedulerFunction/MailSchedulerFunction.csproj
@@ -4,6 +4,7 @@
     <AzureFunctionsVersion>V2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.22" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
   </ItemGroup>
