--- a/Functions/MailSchedulerFunction/MailSchedulerFunction.csproj
+++ b/Functions/MailSchedulerFunction/MailSchedulerFunction.csproj
@@ -20,4 +20,7 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Config\" />
+  </ItemGroup>
 </Project>
