--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="2.6.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.ILogger" Version="1.0.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
