Added new test data, then fixed tests/bugs

--- a/Tests/EmailSentimentAnalysis.Tests.Unit/EmailSentimentAnalysis.Tests.Unit.csproj
+++ b/Tests/EmailSentimentAnalysis.Tests.Unit/EmailSentimentAnalysis.Tests.Unit.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="TestData\SImpleEmailInHtml.html" />
     <None Remove="TestData\WeeklyEmailHtmlContent.html" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="TestData\SImpleEmailInHtml.html" />
     <EmbeddedResource Include="TestData\WeeklyEmailHtmlContent.html" />
   </ItemGroup>
 
