Slight refactor, added QueryAPI tests

--- a/Tests/EmailSentimentAnalysis.Tests.Unit/EmailSentimentAnalysis.Tests.Unit.csproj
+++ b/Tests/EmailSentimentAnalysis.Tests.Unit/EmailSentimentAnalysis.Tests.Unit.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\..\Functions\MailCollectorFunction\MailCollectorFunction.csproj" />
     <ProjectReference Include="..\..\Functions\MailProcessorFunction\MailProcessorFunction.csproj" />
     <ProjectReference Include="..\..\Functions\MailSanitiserFunction\MailSanitiserFunction.csproj" />
+    <ProjectReference Include="..\..\Functions\QueryMailApiFunction\QueryMailApiFunction.csproj" />
   </ItemGroup>
 
 </Project>
