Added better error handling from sentiment analysis results and remove html comment strategy with test

--- a/Tests/EmailSentimentAnalysis.Tests.Unit/EmailSentimentAnalysis.Tests.Unit.csproj
+++ b/Tests/EmailSentimentAnalysis.Tests.Unit/EmailSentimentAnalysis.Tests.Unit.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="TestData\ComplexEmail.html" />
     <None Remove="TestData\SImpleEmailInHtml.html" />
     <None Remove="TestData\WeeklyEmailHtmlContent.html" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="TestData\ComplexEmail.html" />
     <EmbeddedResource Include="TestData\SImpleEmailInHtml.html" />
     <EmbeddedResource Include="TestData\WeeklyEmailHtmlContent.html" />
   </ItemGroup>
